+ and - buttons have started working sort of

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,29 @@
 	width:100px;
 }
 
+.instance-divs {
+	width:100px;
+	color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+    display: inline-block;
+  	margin-bottom: 0;
+  	font-weight: 400;
+  	text-align: center;
+  	vertical-align: middle;
+  	cursor: pointer;
+  	background-image: none;
+  	border: 1px solid transparent;
+  	white-space: nowrap;
+  	padding: 6px 12px;
+  	font-size: 14px;
+  	line-height: 1.42857143;
+  	border-radius: 4px;
+  	 
+
+
+}
+
 /*.rotate {
 /* Safari */
 /*-webkit-transform: rotate(-90deg);*/
