--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,10 @@
 
   <div class="container">
     <div class="row">
+    <div> {{message}} </div>
       <div class="col-md-12" id="primary-content">
         <!-- the container that gets populated with the index -->
+
       </div>
     </div>
   </div>
@@ -35,6 +37,7 @@
       <div class="alert alert-danger fade in" style="display:none;"></div>
       <form>
         <h2><%= title %></h2>
+
         <div class="form-group">
           <label>Title:</label>
           <input type="text" class="form-control" name="title" value="<%= title %>" />
