--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -20,7 +20,7 @@
         <p>
 					<label>Password:</label>
 					<input name="password" type="password">
-					<!--input name="password" type="text"-->
+					<!input name="password" type="text"-->
        <!--  </p>
         <p>
 					<input value="register" type="submit">
