--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-md-12" id="primary-content">
 
-      <p> Chocolate </p>
+      <p> HotChocolate </p>
         <!-- the container that gets populated with the index -->
       </div>
     </div>
