--- a/server/templates/thankyou.html
+++ b/server/templates/thankyou.html
@@ -3,10 +3,9 @@
 	<head>
 		<title>Authentication Example</title>
 		<!-- load the bootstrap stylesheet -->
-  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
-  
-</head>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+  </head>
   <body class='tyPage'>
 		<section class="tySection">
 			<h1>Registered</h1>
