created a footer and header in the index-2.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,16 @@
   <!-- load the bootstrap stylesheet -->
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="css/style-css.css" media="all" rel="stylesheet" type="text/css">
+    <!-- Fonts Title -->
+  <script src="//use.typekit.net/wat4for.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
+
   <!-- load the libraries we need -->
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-   <script type="text/javascript" src="backbone.localStorage.js"></script>
+  <script type="text/javascript" src="backbone.localStorage.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!-- load our scripts -->
   <script type="text/javascript" src="js/task_router.js"></script>
@@ -19,6 +24,9 @@
   <script type="text/javascript" src="js/views/task_new.js"></script>
   <script type="text/javascript" src="js/views/task_edit.js"></script>
   <!-- <script type="text/javascript" src="js/views/task_show.js"></script>-->
+
+
+
 </head>
 <body>
 
