--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,7 +1,8 @@
+
 #Tasks div	{
 	  background-color: #E8DFDF;
 	  float: left;
-	  margin: 0 5%;
+    width: 100%;
 }
 .task-title	{
 	display: block;
@@ -14,7 +15,7 @@
 .instances	{
 	display:block;
 	float:left;
-	margin: 0 5%;
+  margin: 0 5%;
 	background-color:#ccc; 
 	 
 }
@@ -29,7 +30,7 @@
 }
 
 .instance-divs {
-	width:100px;
+	width:100%;
 	color: #fff;
     background-color: #d9534f;
     border-color: #d43f3a;
