--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
 		<!-- load the bootstrap stylesheet -->
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="css/style-danniel.css" media="all" rel="stylesheet" type="text/css" />
   <!-- load the libraries we need -->
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
@@ -20,6 +21,19 @@
   <script type="text/javascript" src="js/views/task_show.js"></script>
 </head>
   <body class='loginPage'>
+    <nav>
+  <div class="nav-div">
+    <p class="tms-title">TMS<sup class="tms-tm">&#8482;</sup></p>
+    <p class="tms-slogan">Track your shit the right way</p> 
+  </div> 
+  <div class="nav-menu">
+    <ul class="nav-ul">
+      <li class="nav-li"><a href="">The Team</a></li>
+      <li class="nav-li"><a href="">The Project</a></li>
+    </ul>
+   </div>  
+</nav>
+
 		<section class="loginSection">
 			<h1>TMS Login</h1>
 				<div>{{message}}</div>
