--- a/templates/css/style-danniel.css
+++ b/templates/css/style-danniel.css
@@ -2,13 +2,18 @@ body {
 	background-color: #e0ffff;
 }
 
-h1 h2 h3 h4 h5 h6 p {
-  font-family: "Helvetica Neue","nimbus-sans";
+h1 h2 h3 h4 h5 h6 {
+  font-family: 'Orbitron', sans-serif;
   }
+
+p {
+  font-family: 'Belleza', sans-serif;
+}  
 
 /* Nav style */  
 
 .nav-div {
+  height: 155px;
  	padding: 18px 0px 18px 10px;
   background-color: rgba(64, 224, 208, 0.9);
   margin-bottom: 25px;
@@ -25,6 +30,7 @@ h1 h2 h3 h4 h5 h6 p {
   line-height: 0.75em;
   letter-spacing: -0.05em;
   color: #ffffff;
+  font-family: "Helvetica Neue","nimbus-sans";
 }
 
 .tms-tm {
@@ -39,18 +45,19 @@ h1 h2 h3 h4 h5 h6 p {
 .tms-slogan {
   font-size: 22px;
   font-style: italic;
-  line-height: 0.25em;
+  line-height: 1.0em;
   letter-spacing: -0.05em;
   color: #ffffff;
   padding-left: 10px;
-  font-family: "Helvetica Neue","nimbus-sans";
+  font-family: 'Orbitron', sans-serif;
 }
 
 .nav-menu {
     width: 60%;
     position: absolute;
-    top: 65px;
-    right: -28%; /*Tal need your help aligning the menue to the bottom div */
+    top: 105px;
+    /*right: -28%; /*Tal need your help aligning the menue to the bottom div */
+    left: 68%;
 }
 
 .nav-ul {
@@ -61,22 +68,23 @@ h1 h2 h3 h4 h5 h6 p {
 
 .nav-li {
   background-color: #e0ffff;
-  padding: 10px 20px 45px 20px;
+  padding: 10px 0px 40px 0px;
   border: 0px solid;
   border-radius: 15px;
-  text-align: left;
-  color: #555555;
+  text-align: center;
   float: left;
   white-space:nowrap; 
   margin: 2px;
   text-decoration: none;
+  font-family: 'Belleza', sans-serif;
+  font-size: 21px;
   -webkit-transition: .12s;
   transition: .12s;
 } 
 
 .nav-li:hover {
   background-color: #e0ffff;
-  padding: 10px 20px 45px 20px;
+  padding: 10 px 0px 40px 0px;
   border: 0px solid;
   border-radius: 15px;
   margin-top: -8px;
@@ -87,7 +95,14 @@ h1 h2 h3 h4 h5 h6 p {
 
 .nav-li a {
   text-decoration: none;
-  font: "Helvetica Neue","nimbus-sans";
+  font-family: 'Belleza', sans-serif;
+  color: #acc;
+  padding: 20px 20px 40px 20px;
+}
+
+.nav-li a:hover {
+  text-decoration: none;
+  font-family: 'Belleza', sans-serif;
   color: #555555;
 }
 
@@ -95,7 +110,7 @@ h1 h2 h3 h4 h5 h6 p {
   color: #fff;
   background-color: #555555;;
   border-color: #555555;
-  font-family: "Helvetica Neue","nimbus-sans";
+  font-family: 'Belleza', sans-serif;
 }
 
 .btn-green-bg:hover {
@@ -104,18 +119,69 @@ h1 h2 h3 h4 h5 h6 p {
   border-color: #000;
 }
 
-/* Footer style */
+/* Login Page */
 
-footer {
-	background-color: #ffffff;
-	height: 60px;
-
-}
-.footer-div {
-	padding: 10px 0px 0px 10px;
+.loginSection {
+    text-align: center;
+    padding-top: 10%;
 }
 
-.footer-paragraph {
-	font-size: 15px;
-	color: #acc;
+.regSection {
+    text-align: center;
+    padding-top: 10%;
 }
+
+/* Weather */
+.weather-image {
+
+}
+
+#box {
+  width: 25%;
+  text-align: center;
+  font-family: 'Belleza', sans-serif;
+  color: #ffffff;
+  top: -7px;
+  right: 102px;
+  position: absolute;
+}
+
+#weather {
+  font-family: 'Belleza', sans-serif;
+  font-size: 20px;
+  padding: 0 0 0 0;
+
+}
+
+/*iPad 3/4 */
+/*@media only screen and (max-width: 768px) {
+  .nav-menu {
+    width: 36%;
+    position: absolute;
+    top: 83px;
+    left: 63%;
+  }
+
+}
+
+
+@media only screen and (max-width: 414px) {
+  .nav-menu {
+    width: 36%;
+    position: absolute;
+    top: 65px;
+    left: 63%;
+  }
+
+}
+
+
+@media only screen and (max-width: 357px) {
+  .nav-menu {
+    width: 36%;
+    position: absolute;
+    top: 65px;
+    left: 63%;
+  }
+
+}*/
