--- a/templates/css/style-danniel.css
+++ b/templates/css/style-danniel.css
@@ -2,9 +2,9 @@ body {
 	background-color: #e0ffff;
 }
 
-h1 h2 h3 h4 h5 h6 {
+/*h1 h2 h3 h4 h5 h6 {
   font-family: 'Orbitron', sans-serif;
-  }
+  }*/
 
 p {
   font-family: 'Belleza', sans-serif;
