--- a/templates/index.html
+++ b/templates/index.html
@@ -106,8 +106,8 @@
 
       <div class="instance-block">
         <div class="task-buttons">
-  	     <a href="#" class="add task-title btn btn-danger btn-small">+</a>
-          <a href="#" class="petitedelete task-title btn btn-danger btn-small">-</a>
+  	     <a class="add task-title btn btn-danger btn-small" rel="nofollow">+</a>
+          <a class="petitedelete task-title btn btn-danger btn-small" rel="nofollow">-</a>
         </div>
         <div class="instances"></div>
       </div>  
