--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,11 @@
     <p class="tms-slogan">Track your shit the right way</p> 
   </div> 
 
-  <div id='box'>
-      <div id='weather'></div>
-  </div>
+ 
+    <div id='box'>
+        <div id='weather'></div>
+    </div>
+
   
   <div class="nav-menu">
     <ul class="nav-ul">
@@ -53,7 +55,7 @@
     </ul>
    </div>  
 </nav>
-
+<div class="container-background">
   <div class="container">
     <div class="row">
       <div class="col-md-12" id="primary-content">
@@ -61,7 +63,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <!-- the form, used for create and edit -->
   <script type="text/jst" id="formTemplate">
     <div class="well">
@@ -85,7 +87,7 @@
 
   <!-- the index container -->
   <script type="text/template" id="indexTemplate">
-    <div class="well">
+    <div class="well button-shadow">
       <a class="btn-green-bg btn btn-block btn-large btn-info" href="#task/new">Create New Task</a>
     </div>
       <div id="Tasks"></div>
