--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,11 @@
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style-danniel.css" media="all" rel="stylesheet" type="text/css" />
+  <!-- Fonts Title -->
+    <!-- Orbitron -->
+    <link href='http://fonts.googleapis.com/css?family=Orbitron:400,500' rel='stylesheet' type='text/css'>
+    <!-- Belleza -->
+    <link href='http://fonts.googleapis.com/css?family=Belleza' rel='stylesheet' type='text/css'>
   <!-- load the libraries we need -->
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
@@ -30,31 +35,39 @@
     <ul class="nav-ul">
       <li class="nav-li"><a href="">The Team</a></li>
       <li class="nav-li"><a href="">The Project</a></li>
+      <li class="nav-li"><a href="/logout">Logout</a></li>
     </ul>
    </div>  
 </nav>
 
 		<section class="loginSection">
-			<h1>TMS Login</h1>
 				<div>{{message}}</div>
 
 				<form method="post" action="/login">
 				<br/>
 					<p>
-						<label>Username:</label>
-						<input name="username" type="text">
-        </p>
+						<label class="label-text">Username:</label>
+          </p>
+          <p>  
+						<input  class="label-shadow" name="username" type="text">
+          </p>
         <p>
-					<label>Password:</label>
-					<input name="password" type="password">
+					<label class="label-text">Password:</label>
+        </p>
+        <p>  
+					<input class="label-shadow" name="password" type="password">
 					<!--input name="password" type="text"-->
         </p>
+        <br>
         <p>
-					<input value="Login" type="submit">
+					<input class="login-width edit-btn btn btn-danger btn-small" value="Login" type="submit">
         </p>
       </form>
-      <a href="/logout">Log-Out</a>
-      <a href="/register">Register</a>
+      <!-- <a href="/logout" class="login-width edit-btn btn btn-danger btn-small">Log-Out</a>
+      <br> -->
+      <br>
+      <a href="/register" class="login-width edit-btn btn btn-danger btn-small">Register</a>
+
 
     </section>
   </body>
