--- a/templates/css/style-danniel.css
+++ b/templates/css/style-danniel.css
@@ -167,7 +167,7 @@ p {
   height: 55px;
   text-align: center;
   color: #555555;
-  -moz-box-shadow:1px 0px 1px #bbbbbb,
+  /*-moz-box-shadow:1px 0px 1px #bbbbbb,
     0px 1px 1px #dddddd,2px 1px 1px #bbbbbb,
     1px 2px 1px #dddddd,3px 2px 1px #bbbbbb,
     2px 3px 1px #dddddd,4px 3px 1px #bbbbbb,
@@ -187,7 +187,7 @@ p {
     2px 3px 1px #dddddd,4px 3px 1px #bbbbbb,
     3px 4px 1px #dddddd,5px 4px 1px #bbbbbb,
     4px 5px 1px #dddddd,6px 5px 1px #bbbbbb,
-    8px 8px 8px rgba(0, 0, 0, 0.1);
+    8px 8px 8px rgba(0, 0, 0, 0.1);*/
 
 }
 
