--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
 		<title>Authentication Example</title>
 		<!-- load the bootstrap stylesheet -->
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/style-danniel.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="../css/styles.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="../css/style-danniel.css" media="all" rel="stylesheet" type="text/css" />
   <!-- Fonts Title -->
     <!-- Orbitron -->
     <link href='http://fonts.googleapis.com/css?family=Orbitron:400,500' rel='stylesheet' type='text/css'>
