--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 		<title>Authentication Example</title>
 		<!-- load the bootstrap stylesheet -->
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="../css/styles.css" media="all" rel="stylesheet" type="text/css" />
   <!-- load the libraries we need -->
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
