--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -4,7 +4,7 @@
 		<title>Authentication Example</title>
 		<!-- load the bootstrap stylesheet -->
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="../css/styles.css" media="all" rel="stylesheet" type="text/css" />
   
 </head>
   <body class='tyPage'>
