--- a/templates/index.html
+++ b/templates/index.html
@@ -23,12 +23,12 @@
   <script type="text/javascript" src="backbone.localStorage.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!-- load our scripts -->
-  <script type="text/javascript" src="js/task_router.js"></script>
-  <script type="text/javascript" src="js/models/task_model.js"></script>
-  <script type="text/javascript" src="js/views/task_index.js"></script>
-  <script type="text/javascript" src="js/views/task_column.js"></script>
-  <script type="text/javascript" src="js/views/task_new.js"></script>
-  <script type="text/javascript" src="js/views/task_edit.js"></script>
+  <script type="text/javascript" src="../js/task_router.js"></script>
+  <script type="text/javascript" src="../js/models/task_model.js"></script>
+  <script type="text/javascript" src="../js/views/task_index.js"></script>
+  <script type="text/javascript" src="../js/views/task_column.js"></script>
+  <script type="text/javascript" src="../js/views/task_new.js"></script>
+  <script type="text/javascript" src="../js/views/task_edit.js"></script>
   <!-- <script type="text/javascript" src="js/views/task_show.js"></script>-->
 
 
@@ -38,7 +38,7 @@
 <nav>
   <div class="nav-div">
     <p class="tms-title">TMS<sup class="tms-tm">&#8482;</sup></p>
-    <p class="tms-slogan">Track your shit the right way</p> 
+    <p class="tms-slogan">Track your stuff the right way</p> 
   </div> 
 
  
@@ -169,7 +169,7 @@
         var icon = 
             "<img src=" + parsed_json['current_observation']
         ['icon_url']+ '>'
-      $('#weather').html(icon + '<br/>' + "Current temperature in " + location + " is: " + temp_f + "&#x2109;" + '<br/>' + 'Current weather is ' + weather);
+      $('#weather').html("<div class='icon'>" + icon + "</div>" + '<br/>' + "Current temperature in " + location + " is: " + temp_f + "&#x2109;" + '<br/>' + 'Current weather is ' + weather);
       }
       });
     });
