--- a/templates/login.html
+++ b/templates/login.html
@@ -17,54 +17,83 @@
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!-- load our scripts -->
-  <script type="text/javascript" src="js/task_router.js"></script>
-  <script type="text/javascript" src="js/models/task_model.js"></script>
-  <script type="text/javascript" src="js/views/task_index.js"></script>
-  <script type="text/javascript" src="js/views/task_row.js"></script>
-  <script type="text/javascript" src="js/views/task_new.js"></script>
-  <script type="text/javascript" src="js/views/task_edit.js"></script>
-  <script type="text/javascript" src="js/views/task_show.js"></script>
+  <script type="text/javascript" src="../js/task_router.js"></script>
+  <script type="text/javascript" src="../js/models/task_model.js"></script>
+  <script type="text/javascript" src="../js/views/task_index.js"></script>
+  <script type="text/javascript" src="../js/views/task_row.js"></script>
+  <script type="text/javascript" src="../js/views/task_new.js"></script>
+  <script type="text/javascript" src="../js/views/task_edit.js"></script>
+  <script type="text/javascript" src="../js/views/task_show.js"></script>
 </head>
   <body class='loginPage'>
     <nav>
-  <div class="nav-div">
-    <p class="tms-title">TMS<sup class="tms-tm">&#8482;</sup></p>
-    <p class="tms-slogan">Track your shit the right way</p> 
-  </div> 
-  <div class="nav-menu">
-    <ul class="nav-ul">
-      <li class="nav-li"><a href="">The Team</a></li>
-      <li class="nav-li"><a href="">The Project</a></li>
-      <li class="nav-li"><a href="/logout">Logout</a></li>
-    </ul>
-   </div>  
-</nav>
+      <div class="nav-div">
+        <p class="tms-title">TMS<sup class="tms-tm">&#8482;</sup></p>
+        <p class="tms-slogan">Track your stuff the right way</p> 
+      </div> 
 
-		<section class="loginSection">
-				<div class="label-text">{{message}}</div>
+     
+        <div id='box'>
+            <div id='weather'></div>
+        </div>
 
-				<form method="post" action="/login">
-				<br/>
+      
+      <div class="nav-menu">
+        <ul class="nav-ul">
+          <li class="nav-li"><a href="">the Team</a></li>
+          <li class="nav-li"><a href="">the Project</a></li>
+          <li class="nav-li"><a href="">Logout</a></li>
+        </ul>
+       </div>  
+    </nav>
+    
+  		<section class="loginSection">
+  				<div class="label-text">{{message}}</div>
+
+  				<form method="post" action="/login">
+  				<br/>
+            <p>  
+  						<input  class="label-shadow" name="username" type="text" placeholder="Login">
+            </p>
+          <!-- <p>
+  					<label class="label-text">Password:</label>
+          </p> -->
           <p>  
-						<input  class="label-shadow" name="username" type="text" placeholder="Login">
+  					<input class="label-shadow" name="password" type="password" placeholder="Password">
+  					<!--input name="password" type="text"-->
           </p>
-        <!-- <p>
-					<label class="label-text">Password:</label>
-        </p> -->
-        <p>  
-					<input class="label-shadow" name="password" type="password" placeholder="Password">
-					<!--input name="password" type="text"-->
-        </p>
-        <br>
-        <p>
-					<input class="login-width edit-btn btn btn-danger btn-large" value="Login" type="submit">
-        </p>
-      </form>
-      <!-- <a href="/logout" class="login-width edit-btn btn btn-danger btn-small">Log-Out</a>
-      <br> -->
-      <a href="/register" class="login-width edit-btn btn btn-danger btn-small">Creat An Account</a>
+          
+          <p>
+  					<input class="login-width edit-btn btn btn-danger btn-large" value="Login" type="submit">
+          </p>
+        </form>
+        <!-- <a href="/logout" class="login-width edit-btn btn btn-danger btn-small">Log-Out</a>
+        <br> -->
+        <a href="/register" class="login-width edit-btn btn btn-danger btn-small">Creat An Account</a>
 
 
-    </section>
+      </section>
+    
   </body>
+  <script>
+    //Weather
+    jQuery(document).ready(function($) {
+      $.ajax({
+      url : //"http://api.wunderground.com/api/f71270681576e132/geolookup/conditions/q/IA/Cedar_Rapids.json",
+        "http://api.wunderground.com/api/f71270681576e132/geolookup/conditions/q/autoip.json",
+      dataType : "jsonp",
+      success : function(parsed_json) {
+      var location = parsed_json['location']['city'];
+      var temp_f = parsed_json['current_observation']['temp_f'];
+        var weather = 
+        parsed_json['current_observation']
+        ['weather'];
+        var icon = 
+            "<img src=" + parsed_json['current_observation']
+        ['icon_url']+ '>'
+      $('#weather').html("<div class='icon'>" + icon + "</div>" + '<br/>' + "Current temperature in " + location + " is: " + temp_f + "&#x2109;" + '<br/>' + 'Current weather is ' + weather);
+      }
+      });
+    });
+  </script>
 </html>
