new styling in header

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
 <body>
 <nav>
   <div class="nav-div">
-    <p class="tms-title">TMS<sup class="tms-tm">&#8482;</sup></p>
-    <p class="tms-slogan">Track your stuff the right way</p> 
+    <p class="tms-title">Trackt<sup class="tms-tm">&#8482;</sup></p>
+    <p class="tms-slogan">Keep track of your activities and meet your goals.</p> 
   </div> 
 
  
