--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -71,7 +71,7 @@
         </p>
       </form> -->
       
-      <a href="index.html" class="login-width edit-btn btn btn-danger btn-small">Sign-In</a>
+      <a href="/login" class="login-width edit-btn btn btn-danger btn-small">Sign-In</a>
     </section>
   </body>
   <script>
