--- a/css/style-danniel.css
+++ b/css/style-danniel.css
@@ -74,7 +74,7 @@ p {
 .tms-slogan {
   font-size: 28px;
   line-height: 1.0em;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.04indexem;
   color: #ffffff;
   padding-left: 10px;
   font-family: 'Frutiger', sans-serif;
