--- a/templates/login.html
+++ b/templates/login.html
@@ -40,9 +40,9 @@
       
       <div class="nav-menu">
         <ul class="nav-ul">
-          <li class="nav-li"><a href="">the Team</a></li>
-          <li class="nav-li"><a href="">the Project</a></li>
-          <li class="nav-li"><a href="">Logout</a></li>
+          <li class="nav-li"><a href="theTeam.html">the Team</a></li>
+          <li class="nav-li"><a href="theProject.html">the Project</a></li>
+          <!-- <li class="nav-li"><a href="">Logout</a></li> -->
         </ul>
        </div>  
     </nav>
