--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,8 @@
   
   <div class="nav-menu">
     <ul class="nav-ul">
-      <li class="nav-li"><a href="">the Team</a></li>
-      <li class="nav-li"><a href="">the Project</a></li>
+      <li class="nav-li"><a href="theTeam.html">the Team</a></li>
+      <li class="nav-li"><a href="theProject.html">the Project</a></li>
       <li class="nav-li"><a href="">Logout</a></li>
     </ul>
    </div>  
@@ -79,8 +79,8 @@
           <input type="text" class="form-control" name="duration" value="<%= duration %>" />
         </div>
 
-        <button class="save btn btn-large btn-info" type="submit">Save</button>
-        <a href="#tasks/index" class="btn btn-large">Cancel</a>
+        <button class="save btn btn-large btn-danger" type="submit">Save</button>
+        <a href="#tasks/index" class="delete-create-button btn btn-large">Cancel</a>
       </form>
     </div>
   </script>
