--- a/css/style-danniel.css
+++ b/css/style-danniel.css
@@ -145,6 +145,39 @@ p {
   list-style-type: none;
 }
 
+.btn-tms, .btn-tms:hover, .btn-tms:active {
+
+  background: transparent;
+  border: 0px solid;
+  color: #acc;
+  font-family: 'Belleza', sans-serif;
+  box-shadow: 0px 0px 0px transparent;
+  /* CSS Transition */
+  -webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
+  -moz-transition: background .2s ease-in-out, border .2s ease-in-out;
+  -ms-transition: background .2s ease-in-out, border .2s ease-in-out;
+  -o-transition: background .2s ease-in-out, border .2s ease-in-out;
+  transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.theTeam-nav-close-button {
+  font-size: 25px;
+}
+
+.theTeam-nav-close-button:hover {
+  color: black;
+  -webkit-transition: color .2s ease-in-out, border .2s ease-in-out;
+  -moz-transition: color .2s ease-in-out, border .2s ease-in-out;
+  -ms-transition: color .2s ease-in-out, border .2s ease-in-out;
+  -o-transition: color .2s ease-in-out, border .2s ease-in-out;
+  transition: color .2s ease-in-out, border .2s ease-in-out;
+}
+.btn:focus,.btn:active, .btn:hover {
+   outline: none !important;
+   background: transparent;
+   border: 0px solid;
+}
+
 .btn-green-bg {
   color: #fff;
   background-color: #555555;;
@@ -248,6 +281,32 @@ p {
   padding: 0 0 0 0;
 
 }
+
+/*theTeam*/
+.fullScreenBackground {
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.99);
+  z-index: 1;
+  padding-top: 25px;
+  webkit-animation-duration: 3s;
+}
+
+.theTeam-nav {
+  padding-bottom: 50px;
+}
+
+.theTeam-nav-close {
+    float: right;
+}
+
+.theTeamClose {
+  padding-bottom: 25px;
+}
+
+
 
 /*iPad 3/4 */
 /*@media only screen and (max-width: 768px) {
